[project]
authors = [{name = "Johannes Koester", email = "johannes.koester@uni-due.de"}]
description = "Dataclass driven argparse handling"
dependencies = []
name = "ddargparse"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ddargparse = { path = ".", editable = true }

[tool.pixi.tasks]
