[project]
authors = [{name = "Johannes Koester", email = "johannes.koester@uni-due.de"}]
description = "Dataclass driven argparse handling"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
name = "ddargparse"
requires-python = ">= 3.12"
version = "0.3.2"

[project.urls]
repository = "https://github.com/koesterlab/ddargparse"
documentation = "https://github.com/koesterlab/ddargparse"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]
requires-pixi = ">=0.63"

[tool.pixi.pypi-dependencies]
ddargparse = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = ["dev"] }
publish = { features = ["publish"] }
minpy = { features = ["minpy", "dev"] }

[tool.pixi.feature.minpy.dependencies]
python = "3.12.*"

[tool.pixi.feature.dev.pypi-dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.10.0,<0.11"
pytest-cov = ">=6.0.0,<7"
pyrefly = ">=0.52.0,<0.53"

[tool.pixi.feature.dev.tasks]
format = {cmd = "ruff format", default-environment = "dev"}
lint = {cmd = "ruff check", default-environment = "dev"}
typecheck = {cmd = "pyrefly check", default-environment = "dev"}
qc = { depends-on = ["format", "lint", "typecheck"] }
coverage-report = {cmd = "coverage report -m", default-environment = "dev"}

[tool.pixi.feature.dev.tasks.test]
cmd = [
  "pytest",
  "--cov=ddargparse",
  "--cov-report=xml:coverage-report/coverage.xml",
  "--cov-report=term-missing",
  "tests/test_ddargparse.py"
]

[tool.coverage.report]
exclude_lines = [
  "pass",
  "\\.\\.\\.",
]
fail_under = 100.0

# Publish
[tool.pixi.feature.publish.pypi-dependencies]
twine = ">=6.1.0,<7"
build = ">=1.2.2,<2"

[tool.pixi.feature.publish.tasks]
build = { cmd = "python -m build", description = "Build the package into the dist/ directory" }
check-build = { cmd = "python -m twine check dist/*", depends-on = [
  "build",
], description = "Check that the package can be uploaded" }